--- a/main.html
+++ b/main.html
@@ -3,11 +3,84 @@
 <html>
 
 <head>
+    <title>HTML Assignment 3</title>
 	<link rel="stylesheet" href="styles.css">
+    
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+    <center><h1>HTML Assignment #3</h1></center>
+
+    <table id="table-1" class="middle" border="1">
+        <tr>
+            <td id="t11" class="left">left</td>
+            <td id="t12" class="center">center</td>
+            <td id="t13"  class="right">right</td>
+        </tr>
+        <tr>
+            <td id="t11" class="left">left</td>
+            <td id="t12"  class="center">center</td>
+            <td id="t13" class="right">right</td>
+        </tr>
+        <tr>
+            <td id="t11" class="left">left</td>
+            <td id="t12"  class="center">center</td>
+            <td id="t13"  class="right">right</td>
+        </tr>
+    </table>
+
+    
+    <table id="table-2" class="middle" border="1">
+        <tr>
+            <td id="t21" colspan="6">Header Row</td>
+        </tr>
+        <tr>
+            <td rowspan="4">Row 2, Column 1</td>
+            <td>Row 2, Column 2</td>
+            <td>Row 2, Column 3</td>
+            <td>Row 2, Column 4</td>
+            <td>Row 2, Column 5</td>
+            <td>Row 2, Column 6</td>
+        </tr>
+        <tr>
+            <td>Row 3, Column 2</td>
+            <td colspan="3" rowspan="2">Row 3, Column 3</td>
+            <td>Row 3, Column 6</td>
+        </tr>
+        <tr>
+            <td>Row 4, Column 2</td>
+            <td>Row 4, Column 6</td>
+        </tr>
+        <tr>
+            <td>Row 5, Column 2</td>
+            <td>Row 5, Column 3</td>
+            <td>Row 5, Column 4</td>
+            <td>Row 5, Column 5</td>
+            <td>Row 5, Column 6</td>
+        </tr>
+        <tr>
+            <td colspan="6">Row 6, Column 1</td>
+        </tr>
+    </table>
+
+
+    <table id="table-3" class="middle" border="1">
+        <tr class="green">
+            <td colspan="3">Green Header Row</td>
+        </tr>
+        <tr>
+            <td></td>
+            <td id="t-image">
+                <img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg" alt="Image">
+            </td>
+            <td></td>
+        </tr>
+        <tr class="blue">
+            <td colspan="3">Blue Footer Row</td>
+        </tr>
+    </table>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
