--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 	<!-- the entire body must be written by student -->
     <center><h1>HTML Assignment #3</h1></center>
 
-    <table id="table-1" class="middle" border="1">
+    <table id="table-1" class="middle">
         <tr>
             <td id="t11" class="left">left</td>
             <td id="t12" class="center">center</td>
@@ -31,7 +31,7 @@
     </table>
 
     
-    <table id="table-2" class="middle" border="1">
+    <table id="table-2" class="middle">
         <tr>
             <td id="t21" colspan="6">Header Row</td>
         </tr>
@@ -65,7 +65,7 @@
     </table>
 
 
-    <table id="table-3" class="middle" border="1">
+    <table id="table-3" class="middle">
         <tr class="green">
             <td colspan="3">Green Header Row</td>
         </tr>
